--- a/style/ipybn.css.template
+++ b/style/ipybn.css.template
@@ -2,6 +2,10 @@
 
 /* PRINT */
 
+div.MathJax_Display {padding: 40px}
+div.input_area  { padding: 10px; }
+div.input_area>div.highlight  { padding:10px; }
+
 /* FONT_CODE */
 .input_area pre { font-size:__FONT_SIZE_CODE__; line-height:120% }
 
@@ -13,7 +17,7 @@ div.text_cell_render { font-size:__FONT_SIZE_TEXT__;  line-height:120% }
 
 /* BACKGROUND */
 div .input_area { background-color:__BACKGROUND__;}
-blockquote { background-color: __QUOTE__; }
+blockquote { background-color:#ffff66; }
 
 /* BUILTIN */
 .input_area .highlight .bp { color: __BUILTIN__ } /* Name.Builtin.Pseudo */
