--- a/style/ipybn.css.template
+++ b/style/ipybn.css.template
@@ -2,8 +2,24 @@
 
 /* PRINT */
 
-div.MathJax_Display {padding: 40px}
+#toc ol {
+    font-size: __FONT_SIZE_CODE__; 
+    line-height: 120%; 
+    padding: 0; 
+    margin-left: __FONT_SIZE_CODE__; 
+    list-style-type: decimal;
+}
+
+/* PRINT */
+div.text_cell_render table, 
+div.text_cell_render  tr,
+div.text_cell_render td {
+    border: 0px solid black;
+}
+div.MathJax_Display {padding: 40px 5px 40px 5px}
+
 div.input_area  { padding: 10px; }
+.rendered_html p{ text-align: left }
 div.input_area>div.highlight  { padding:10px; }
 
 /* FONT_CODE */
@@ -144,4 +160,75 @@ div .cm-s-default { background-color: __BACKGROUND_EDIT__;}
 .input_area .cm-s-ipython span.cm-string { color: __STRING__ } 
 .input_area .cm-s-ipython span.cm-string-2 { color: __STRING__ } 
 
-</style>
+</style><script> 
+// Converts integer to roman numeral
+function romanize(num) {
+    var lookup = {M:1000,CM:900,D:500,CD:400,C:100,XC:90,L:50,XL:40,X:10,IX:9,V:5,IV:4,I:1},
+    roman = '',
+    i;
+    for ( i in lookup ) {
+        while ( num >= lookup[i] ) {
+            roman += i;
+            num -= lookup[i];
+        }
+    }
+    return roman;
+}
+
+// Builds a <ul> Table of Contents from all <headers> in DOM
+function createTOC(){
+    var toc = "";
+    var level = 0;
+    var levels = {}
+    $('#toc').html('');
+
+    $(":header").each(function(i){
+        if (this.id=='tocheading'){return;}
+
+        titleText = this.innerHTML;
+        openLevel = this.tagName[1];
+        if(openLevel>1) {
+            openLevel-=1
+
+        if (levels[openLevel]){
+            levels[openLevel] += 1;
+        } else{
+            levels[openLevel] = 1;
+        }
+
+        if (openLevel > level) {
+            toc += (new Array(openLevel - level + 1)).join('<ol type="1" class="toc">');
+        } else if (openLevel < level) {
+            toc += (new Array(level - openLevel + 1)).join("</ol>");
+            for (i=level;i>openLevel;i--){levels[i]=0;}
+        }
+
+        level = parseInt(openLevel);
+
+
+        if (this.id==''){this.id = this.innerHTML.replace(/ /g,"-")}
+        var anchor = this.id;
+
+        toc += '<li><a href="#' + anchor + '">' + titleText
+        + '</a></li>';
+    }
+
+    });
+
+
+    if (level) {
+        toc += (new Array(level + 1)).join("</ol>");
+    }
+
+
+    $('#toc').append(toc);
+
+};
+
+// Executes the createToc function
+setTimeout(function(){createTOC();},100);
+
+// Rebuild to TOC every minute
+setInterval(function(){createTOC();},60000);
+</script>
+
