--- a/style/ipybn.css.template
+++ b/style/ipybn.css.template
@@ -18,7 +18,8 @@ div.text_cell_render td {
 }
 div.MathJax_Display {padding: 40px 5px 40px 5px}
 
-div.input_area  { padding: 10px; }
+div.input_area span {white-space: nowrap;}
+div.input_area  { padding: 10px; overflow-x: scroll }
 .rendered_html p{ text-align: left }
 div.input_area>div.highlight  { padding:10px; }
 
