--- a/style/ipybn.css.template
+++ b/style/ipybn.css.template
@@ -3,10 +3,10 @@
 /* PRINT */
 
 #toc ol {
-    font-size: __FONT_SIZE_CODE__; 
+    font-size: __FONT_SIZE_TEXT__; 
     line-height: 120%; 
     padding: 0; 
-    margin-left: __FONT_SIZE_CODE__; 
+    margin-left: __FONT_SIZE_TEXT__; 
     list-style-type: decimal;
 }
 
@@ -18,8 +18,7 @@ div.text_cell_render td {
 }
 div.MathJax_Display {padding: 40px 5px 40px 5px}
 
-div.input_area span {white-space: nowrap;}
-div.input_area  { padding: 10px; overflow-x: scroll }
+div.input_area  { padding: 10px;  }
 .rendered_html p{ text-align: left }
 div.input_area>div.highlight  { padding:10px; }
 
